--- a/Bitacora/04122017.md
+++ b/Bitacora/04122017.md
@@ -12,21 +12,52 @@ Crear test de stress, funcionalidad y seguridad para las aplicaciones web y cone
 - **Speed Tracer** (Gratuito): credo por Google, como una extensión de Chrome, basado en Java posee plug-ins para Eclipse
 - **Apache JMeter** (Gratuito):performance testing con recursos estáticos y dinámicos, simula heavy load en servers, conexiones u objetos. Basado en Java y no es un navegador! [Speed Tester]
 
-## Sobre Testing
+## Sobre Desarrollo de Testing
+(http://searchsoftwarequality.techtarget.com/answer/How-to-conduct-performance-stress-load-testing-without-tools)
+### 1. Desarrollar un acercamiento al diseño de funcionalidad
+Veamos la siguiente eurística dada por la nemotecnia CCD IS EARI
+- **C**ontext: el contexto del proyecto incluye los objetivos del PT, criterio de funcionalidad exitosa, desrrollo del ciclo de ida, programa del proyecto, presupuesto del proyecto, herramientas y ambientes disponibles, prioridad de detección de funcionalidades.
+- **C**riteria:criterios de un "buen funcionamiento"
+-- Requerimientos (Requeriments): criterios no negociables, completamente necesarios.
+-- Metas (Goals): criterios deseados pero en algunos casos negociables. Generalmente enfocados al usuario final.
+-- Objetos de testeo (Objectives): se refiere a los datos recolectados en el proceso de testeo, de los que se espera algún valor o mejora de calidad. No necesariamente son cuantitativos.
+-- Objetivos (Targets):valores deseables de recursos de interes bajo ciertas condiciones, generalmente medido en tiempos de respuesta, transacciones por segundo o nivel de utilización de recursos.
+-- Umbrales (Thersholds): el valor máximos aceptable de los recursos de interés.
+- **D**esign: un componente significativo del diseño de un PT es determinar, diseñar y crear datos asociados a la variedad natural de los usuarios de la aplicación.
+- **I**nstall: "Instalar, Configurar o Actualizar las herramientas y el Load Generation Enviroment", Basados en varios criterios de funcionalidad. contexto del proyecto y diseño de los test, se necesitará una variedad de herramientas para generar, cargar y guardar datos de interés.
+- **S**cript: se necesita validad que, una vez implementado, los test interactuan con la aplicación de la manera descrita en el diseño del test, collecciona los datos, y retorna datos importantes y acertados, además del resultado.
+- **E**xecute: la ejecución de los test involucra la validación continua de los test y su ambiente, corriendo nuevos test y logrando todos los datos asociados con la ejecución de estos.
+- **A**nalyze: analizar los resultados del testeo o los datos coleccionados
+- **R**eport:
+- **I**terate:
 
+### 2. Test Performance
+- [ ] **Evaluar el espacio de trabajo:** entender el contenido y sdistema para entender dónde comenzar el testeo.
+- [ ] **Construir los temas a evaluar con los test**
+- [ ] **Entregar la información**
+
+### 3. Software Performance Testing
+- Decidir que escenarios incluir en un test de funcionalidad.
+- Mejora con un buen reporte de bug's
+
+### 4. Qué incluir en un plan de PT.
+Cómo el PT procederá desde la prespectiva "de negocios" a la técnica.  
+
+### 5. SCORN para testear el front end de un website
+El front end contiene más oportunidades de mejoras de comportamiento grandes y baratas.
 
 ## Recomendados por Cristian R.
 **Test de stress**
-- [] JMeter ()
-- [] AB para servidores ()
+- [ ] JMeter ()
+- [ ] AB para servidores ()
 
 **Test de funcionalidad**
-- [] Selenium (http://www.seleniumhq.org/)
-- [] Katalon (https://www.katalon.com/)
+- [ ] Selenium (http://www.seleniumhq.org/)
+- [ ] Katalon (https://www.katalon.com/)
 
 **Test de Seguridad**
-- [] Nikto (https://cirt.net/Nikto2)
-- [] AP/OWASP (https://www.owasp.org/index.php/OWASP_Zed_Attack_Proxy_Project)
-- [] Metasploit (https://www.metasploit.com/)
+- [ ] Nikto (https://cirt.net/Nikto2)
+- [ ] AP/OWASP (https://www.owasp.org/index.php/OWASP_Zed_Attack_Proxy_Project)
+- [ ] Metasploit (https://www.metasploit.com/)
 
 **TODO**: comparar recomendaciones
