--- a/Bitacora/04122017.md
+++ b/Bitacora/04122017.md
@@ -27,9 +27,11 @@ Veamos la siguiente eurística dada por la nemotecnia CCD IS EARI
 - **I**nstall: "Instalar, Configurar o Actualizar las herramientas y el Load Generation Enviroment", Basados en varios criterios de funcionalidad. contexto del proyecto y diseño de los test, se necesitará una variedad de herramientas para generar, cargar y guardar datos de interés.
 - **S**cript: se necesita validad que, una vez implementado, los test interactuan con la aplicación de la manera descrita en el diseño del test, collecciona los datos, y retorna datos importantes y acertados, además del resultado.
 - **E**xecute: la ejecución de los test involucra la validación continua de los test y su ambiente, corriendo nuevos test y logrando todos los datos asociados con la ejecución de estos.
-- **A**nalyze: analizar los resultados del testeo o los datos coleccionados
-- **R**eport:
-- **I**terate:
+- **A**nalyze: analizar los resultados del testeo o los datos coleccionados, ya sea para determinar requerimientos, track ends, detectar cuellos de botella o evaluar la efectividad de ajustar los esfuerzos, es crucial para el éxito del proyecto de testeo.
+- **R**eport: Si los reportes no son claros e intuitivos para el usuario objetivo, el testeo pierde su propósito.
+- **I**terate: ciclo natural de un proyecto.
+
+
 
 ### 2. Test Performance
 - [ ] **Evaluar el espacio de trabajo:** entender el contenido y sdistema para entender dónde comenzar el testeo.
