--- a/Bitacora/04122017.md
+++ b/Bitacora/04122017.md
@@ -32,15 +32,21 @@ Veamos la siguiente eurística dada por la nemotecnia CCD IS EARI
 - **I**terate: ciclo natural de un proyecto.
 
 ### 2. Test Performance
-- [ ] **Evaluar el espacio de trabajo:** entender el contenido y sistema para entender dónde comenzar el testeo.
+- [x] **Evaluar el espacio de trabajo:** entender el contenido y sistema para entender dónde comenzar el testeo.
+
 	***Iniciar una estrategia:*** usando los puntos de Context, Criteria y Desing del pto 1, podremos capturar la escencia de a qué nos referimos con evaluar el espacio. 
+
 	***Entender el sistema:*** antes de pensar en cómo hacer el testeo, primero debes conocer qué estas testeando. Hay tres preguntas que necesitamos responder antes de sentirnos cómodos para aplicar el testeo: 
 	- ¿Cuales son las aplicaciones, recursos de datos, servicios y protocolos del sistema?: aplicaciones y servicios (internas y externas) que conforman el sistema, donde se guardan y leen los datos y su formato, procesos de software involucrados, diferencias entre el entorno de produccion y testeo, protocvolos utilizados, nombres de los procesos, consultas webservices y meétodos llamables utilizados por las partes para comunicarse.
 	- ¿Cómo son las conexiones y la infraestructura de hardware?: nombres, especificaciones y configuraciones de cada server, hay un distribuidor de carga?, si el entorno de testeo es diferente al entorno de producción ¿en que se diferencian?
 	- ¿Qué hacen los workflos de casos y "negocios"?: quien usa el sistema y porqué, que tipo de transacciones ocurren, alguna de ellas es periodica?
+
 	***Bocetos de los modelos de uso:*** diagramas UCML (User Community Modeling Languaje) ayudan a planificar PT, a documentar el test a ejecutar y a explicitar el requerimiento de funcionamiento. Modelos como este permiten crear escenarios de PT razonablemente sensibles, otra ventaja es que suelen ser intuitivos para desarrolladores, usuarios, administradores y testers por igual lo que se traduce en comunicaciones rápidas, requerimientos claros y mejores test. (reference: http://cdn.ttgtmedia.com/digitalguide/images/Misc/perf_test_1.jpg)
-	***Definir qué testear primero:***PT es un proceso dinámico y cambiante altamente iterativo y colaborativo. Para ser colaborativo, se necesitan los datos en formato y terminología acorde al grupo de trabajo; y para ser iterativo, se necesita tener distintos sets de test enfocados en distintos riesgos y con diferentes prioridades.
-	***FIn de la fase:*** lo que deberíamos tener hasta aquí seria un documento de la estrategia de PT, varios diagramas de aplicaicones y sistemas con detalles,asuntos y preguntas abiertas,; varios modelos de uso para aplicaciones y sistemas con detalles, asuntos y preguntas abiertas; y una lista de ideas de test.
+
+	***Definir qué testear primero:*** PT es un proceso dinámico y cambiante altamente iterativo y colaborativo. Para ser colaborativo, se necesitan los datos en formato y terminología acorde al grupo de trabajo; y para ser iterativo, se necesita tener distintos sets de test enfocados en distintos riesgos y con diferentes prioridades.
+
+	***Fin de la fase:*** lo que deberíamos tener hasta aquí seria un documento de la estrategia de PT, varios diagramas de aplicaicones y sistemas con detalles,asuntos y preguntas abiertas,; varios modelos de uso para aplicaciones y sistemas con detalles, asuntos y preguntas abiertas; y una lista de ideas de test.
+
 - [ ] **Construir los temas a evaluar con los test** "escenificar" el entorno (enviroment), identificar datos, construir los srcipts y calibrar los test
 - [ ] **Entregar la información** correr los test, analizar resultados, hacerlos significativos para el equipo y trabajar en el proceso de afinamiento.
 
