--- a/Bitacora/05122017.md
+++ b/Bitacora/05122017.md
@@ -1,11 +1,10 @@
-#05122017
-#... Investigación pt.2
+# 05122017 -> Investigación pt.2
 
 ## Sobre Desarrollo de Testing
-(http://searchsoftwarequality.techtarget.com/answer/How-to-conduct-performance-stress-load-testing-without-tools)
+[Fuente](http://searchsoftwarequality.techtarget.com/answer/How-to-conduct-performance-stress-load-testing-without-tools)
 
 ### 2. Test Performance
-- [x] **Evaluar el espacio de trabajo** 
+- [x] [**Evaluar el espacio de trabajo**](https://github.com/AnnBenavides/Practica2/blob/master/Bitacora/04122017.md#2-test-performance)
 - [ ] **Construir los temas a evaluar con los test** "escenificar" el entorno (enviroment), identificar datos, construir los srcipts y calibrar los test
 - [ ] **Entregar la información** correr los test, analizar resultados, hacerlos significativos para el equipo y trabajar en el proceso de afinamiento.
 
@@ -21,14 +20,14 @@ El front end contiene más oportunidades de mejoras de comportamiento grandes y 
 
 ## Recomendados por Cristian R.
 **Test de stress**
-- [ ] JMeter ()
-- [ ] AB para servidores ()
+- [ ] JMeter
+- [ ] AB para servidores
 
 **Test de funcionalidad**
-- [ ] Selenium (http://www.seleniumhq.org/)
-- [ ] Katalon (https://www.katalon.com/)
+- [ ] [Selenium](http://www.seleniumhq.org/)
+- [ ] [Katalon](https://www.katalon.com/)
 
 **Test de Seguridad**
-- [ ] Nikto (https://cirt.net/Nikto2)
-- [ ] AP/OWASP (https://www.owasp.org/index.php/OWASP_Zed_Attack_Proxy_Project)
-- [ ] Metasploit (https://www.metasploit.com/)
+- [ ] [Nikto](https://cirt.net/Nikto2)
+- [ ] [AP/OWASP](https://www.owasp.org/index.php/OWASP_Zed_Attack_Proxy_Project)
+- [ ] [Metasploit](https://www.metasploit.com/)
