--- a/Bitacora/05122017.md
+++ b/Bitacora/05122017.md
@@ -5,7 +5,22 @@
 
 ### 2. Test Performance
 - [x] [**Evaluar el espacio de trabajo**](https://github.com/AnnBenavides/Practica2/blob/master/Bitacora/04122017.md#2-test-performance)
-- [ ] **Construir los temas a evaluar con los test** "escenificar" el entorno (enviroment), identificar datos, construir los srcipts y calibrar los test
+- [ ] **Construir los temas a evaluar con los test** "escenificar" el entorno (enviroment), identificar datos, construir los scripts y calibrar los test
+
+	***Entender y manejar las herramientas y entornos de testeo:*** el manejo del sistema/aplicación a testear, el manejo de las herramientas de apoyo de monitoreo y debuggin, y el manejo de herramientas de apoyo a la ejecución del PT; en cada una de estas áreas se debe identificar lo que es necesario, instalar el software y hardware requerido, y configurarlo para calzar con el proyecto y coordinar el cómo se usará en el futuro. Hacer la siguiente tabla ayudará a pensar sobre todo lo que se necesitará para el éxito, algunas preguntas serán resueltas con compras, otras con procesos y algunas podrían quedar sin respuesta.
+	![Tabla1](http://cdn.ttgtmedia.com/digitalguide/images/Misc/md_tc.jpg)
+
+	***Identificar, crear y administrar los datos de testeo***
+	- Seleccionar datos basado en el riesgo: cuando identificamos riesgos buscamos qué podría ir mal, podemos usar la nemotecnia FIBLOTS:
+		- **F**requent -> ¿Qué datos son los más utilizados? (login id, reference data, etc)
+		- **I**ntensive -> ¿Qué datos son pesados? (wildcard searches, subir archivos pesados, valores que requieren conversión, etc)
+		- **B**usiness critical -> ¿Qué datos apoyan procesos que representan lo que el "negocio" necesita para trabajar? (procesos a fin de mes, creación de nuevas cuentas, etc)
+		- **L**egal -> ¿Qué datos apoyan procesos que son requeridos para trabajar por contrato?
+		- **O**bvious -> ¿Qué datos apoyan procesos que nos darán mala fama si no funcionan?
+		- **T**echnically risky -> ¿Qué datos son apoyadfos o interactuan con aspectos técnicos riesgosos del sistema? (nuevas o viejas tecnologías, lugares que han fallado antes, etc)
+		- **S**takeholder-mandated -> ¿Qué datos se han dicho/consultado para que tengan un test?
+	- Seleccionar datos basado en los escenarios de testeo
+
 - [ ] **Entregar la información** correr los test, analizar resultados, hacerlos significativos para el equipo y trabajar en el proceso de afinamiento.
 
 ### 3. Software Performance Testing
