--- a/Bitacora/04122017.md
+++ b/Bitacora/04122017.md
@@ -18,11 +18,11 @@ Crear test de stress, funcionalidad y seguridad para las aplicaciones web y cone
 Veamos la siguiente eurística dada por la nemotecnia CCD IS EARI
 - **C**ontext: el contexto del proyecto incluye los objetivos del PT, criterio de funcionalidad exitosa, desrrollo del ciclo de ida, programa del proyecto, presupuesto del proyecto, herramientas y ambientes disponibles, prioridad de detección de funcionalidades.
 - **C**riteria:criterios de un "buen funcionamiento"
--- Requerimientos (Requeriments): criterios no negociables, completamente necesarios.
--- Metas (Goals): criterios deseados pero en algunos casos negociables. Generalmente enfocados al usuario final.
--- Objetos de testeo (Objectives): se refiere a los datos recolectados en el proceso de testeo, de los que se espera algún valor o mejora de calidad. No necesariamente son cuantitativos.
--- Objetivos (Targets):valores deseables de recursos de interes bajo ciertas condiciones, generalmente medido en tiempos de respuesta, transacciones por segundo o nivel de utilización de recursos.
--- Umbrales (Thersholds): el valor máximos aceptable de los recursos de interés.
+	- Requerimientos (Requeriments): criterios no negociables, completamente necesarios.
+	- Metas (Goals): criterios deseados pero en algunos casos negociables. Generalmente enfocados al usuario final.
+	- Objetos de testeo (Objectives): se refiere a los datos recolectados en el proceso de testeo, de los que se espera algún valor o mejora de calidad. No necesariamente son cuantitativos.
+	- Objetivos (Targets):valores deseables de recursos de interes bajo ciertas condiciones, generalmente medido en tiempos de respuesta, transacciones por segundo o nivel de utilización de recursos.
+	- Umbrales (Thersholds): el valor máximos aceptable de los recursos de interés.
 - **D**esign: un componente significativo del diseño de un PT es determinar, diseñar y crear datos asociados a la variedad natural de los usuarios de la aplicación.
 - **I**nstall: "Instalar, Configurar o Actualizar las herramientas y el Load Generation Enviroment", Basados en varios criterios de funcionalidad. contexto del proyecto y diseño de los test, se necesitará una variedad de herramientas para generar, cargar y guardar datos de interés.
 - **S**cript: se necesita validad que, una vez implementado, los test interactuan con la aplicación de la manera descrita en el diseño del test, collecciona los datos, y retorna datos importantes y acertados, además del resultado.
