--- a/Bitacora/05122017.md
+++ b/Bitacora/05122017.md
@@ -12,7 +12,7 @@
 	![Tabla1](http://cdn.ttgtmedia.com/digitalguide/images/Misc/md_tc.jpg)
 
 	***Identificar, crear y administrar los datos de testeo***
-	- Seleccionar datos basado en el riesgo: cuando identificamos riesgos buscamos qué podría ir mal, podemos usar la nemotecnia FIBLOTS:
+	- _Seleccionar datos basado en el riesgo:_ cuando identificamos riesgos buscamos qué podría ir mal, podemos usar la nemotecnia FIBLOTS:
 		- **F**requent -> ¿Qué datos son los más utilizados? (login id, reference data, etc)
 		- **I**ntensive -> ¿Qué datos son pesados? (wildcard searches, subir archivos pesados, valores que requieren conversión, etc)
 		- **B**usiness critical -> ¿Qué datos apoyan procesos que representan lo que el "negocio" necesita para trabajar? (procesos a fin de mes, creación de nuevas cuentas, etc)
@@ -20,13 +20,27 @@
 		- **O**bvious -> ¿Qué datos apoyan procesos que nos darán mala fama si no funcionan?
 		- **T**echnically risky -> ¿Qué datos son apoyadfos o interactuan con aspectos técnicos riesgosos del sistema? (nuevas o viejas tecnologías, lugares que han fallado antes, etc)
 		- **S**takeholder-mandated -> ¿Qué datos se han dicho/consultado para que tengan un test?
-	- Seleccionar datos basado en los escenarios de testeo:
+	- _Seleccionar datos basado en los escenarios de testeo:_
+	- _Seleccionar datos basados en disponibilidad:_
+	- _Usar la producción de datos:_
+	- _Usar la generación de datos:_
+
+	***Code your test scripts***
+
+	***Calibrar los modelos de workload***
+	- Cambiando los tiempos y delays
+	- Cambiando el número de usuarios en el test o porcentaje de uso del modelo
+	- Cambiando el tiempo de aceleración del usuario
+	- Cambiando el nro de iteraciones y tiempo entre ellas
+	- Cambiando los escenarios o datos de testeo
+
+	***Al final de esta fase:***
 
 - [ ] **Entregar la información** correr los test, analizar resultados, hacerlos significativos para el equipo y trabajar en el proceso de afinamiento.
 
 ### 3. Software Performance Testing
-- Decidir que escenarios incluir en un test de funcionalidad.
-- Mejora con un buen reporte de bug's
+- **Decidir que escenarios incluir en un test de funcionalidad**
+- **Mejora con un buen reporte de bug's**
 
 ### 4. Qué incluir en un plan de PT.
 Cómo el PT procederá desde la prespectiva "de negocios" a la técnica.  
