--- a/Bitacora/05122017.md
+++ b/Bitacora/05122017.md
@@ -20,10 +20,12 @@
 		- **O**bvious -> ¿Qué datos apoyan procesos que nos darán mala fama si no funcionan?
 		- **T**echnically risky -> ¿Qué datos son apoyadfos o interactuan con aspectos técnicos riesgosos del sistema? (nuevas o viejas tecnologías, lugares que han fallado antes, etc)
 		- **S**takeholder-mandated -> ¿Qué datos se han dicho/consultado para que tengan un test?
-	- _Seleccionar datos basado en los escenarios de testeo:_
-	- _Seleccionar datos basados en disponibilidad:_
-	- _Usar la producción de datos:_
-	- _Usar la generación de datos:_
+	- _Seleccionar datos basado en los escenarios de testeo:_ necesitaremos seleccionar datos que permitan testear escenarios específicos con los modelos de usabilidad y _test scenarios_ 
+	- _Seleccionar datos basados en disponibilidad:_ la idea aquí es la data es de fácil acceso, así como usable y significativa, entonces incluirla en el PT puede salvar tiempo y dinero (como datos de las iteraciónes pasadas, datos de otros poryectos involucrados, odatos generados)
+	- _Usar datos producidos:_ si bien no buscamos apoyarnos sólo en estos datos, estos pueden formar el escenario más rico para el testeo (realista), así como puede ser útil para afinar y debuggear el sistema desde la perspectiva de funcionalidad. Ahora, su debilidad es que puede que no contenga los casos especiales que quisieramos testear por lo que no sería un escenario completo.
+	- _Usar datos generados:_ muchas herrameintas usan datos generados, son utiles ya que te permiten sets grandes de datos que sigan cierto patrón. Con esto puedes cubrir los casos especiales que no cubres con los datos producidos.
+
+	Una vez identificado tus datos, piensa sobre el formato que necesitarás en que estén esos datos (XML, plainText, database, etc), si necesitarán algún tipo de procesamiento o conversión. También piensa sobre cómo administrarás estos datos multiplas versiones sueltas, ¿querrás juntar los datasets? Además hay que analizar la dependencia de estos datos, de haber, habrá observar si nuestras herramientas y procesos de desarrollo soportan la evolución de los datos.
 
 	***Code your test scripts***
 
