--- a/Bitacora/05122017.md
+++ b/Bitacora/05122017.md
@@ -27,7 +27,7 @@
 
 	Una vez identificado tus datos, piensa sobre el formato que necesitarás en que estén esos datos (XML, plainText, database, etc), si necesitarán algún tipo de procesamiento o conversión. También piensa sobre cómo administrarás estos datos multiplas versiones sueltas, ¿querrás juntar los datasets? Además hay que analizar la dependencia de estos datos, de haber, habrá observar si nuestras herramientas y procesos de desarrollo soportan la evolución de los datos.
 
-	***Code your test scripts***
+	***Code your test scripts:***
 
 	***Calibrar los modelos de workload***
 	- Cambiando los tiempos y delays
@@ -38,28 +38,32 @@
 
 	***Al final de esta fase:***
 
-- [ ] **Entregar la información** correr los test, analizar resultados, hacerlos significativos para el equipo y trabajar en el proceso de afinamiento.
 
-### 3. Software Performance Testing
-- **Decidir que escenarios incluir en un test de funcionalidad**
-- **Mejora con un buen reporte de bug's**
-
-### 4. Qué incluir en un plan de PT.
-Cómo el PT procederá desde la prespectiva "de negocios" a la técnica.  
-
-### 5. SCORN para testear el front end de un website
-El front end contiene más oportunidades de mejoras de comportamiento grandes y baratas.
-
-## Recomendados por Cristian R.
+## Recomendados por Cristian R. + recomendaciones encontradas
 **Test de stress**
-- [ ] JMeter
-- [ ] AB para servidores
+- [x] [Apache JMeter](http://jmeter.apache.org/): simula heavy loads y mide la funcionalidad en servers,networks,u objetos como archivos, bases de datos y servicios web, ademas de identificar cuellos de botella y desempeño bajo stress. Test dinámicos y estáticos. 
+	- Multiplataforma (Java)
+	- Escalable
+	- Soporte multiprotocolo (HTTP, SMTP, POP3, LDAP, JDBC, FTP, JMS, SOAP, TCP)
+	- Varias implementaciones pre y post procesos sobre la prueba
+	- Varias evaluaciones para definir criterios
+	- Multiples listeners integrados y externos para visualizar y analizar resultados de los performance test
+	- 
+- [ ] [AB (Apache Brench)para servidores](http://httpd.apache.org/docs/2.2/programs/ab.html): enfocado en HTTP, desarrollado para Apache HTTP server
+- **WCAT** (Gratuito): herramienta para Windows, Web Capacity Analysis Tool, libiana, simula usuarios en 1+ sitiois, performance del server en env controlados, API para facilitar su extensión. _(!) Hay que escribir un script para cada request._
+- **Load Storm** (Suscripción): cloudbased, genera escenarios realistas, al ser un agente externo el que bombardee la aplicación. _(!) Suscripción_
+- **WatiN**(MUERTO):no es un stress tester, más bien un UI tester en C#, usa una API para operar y correr en Firefox y IE. _(!)Pesado de correr suficientes instancias como para simular un heavy load_
+- **HtmlUnit** (Gratuito): algo como una GUI de navegador, posee una API que permite invocar, rellenar y clickear en las paginas, basado en JavaScript (es usado en Spring MVC) 
+- **Speed Tracer** (Gratuito): credo por Google, como una extensión de Chrome, basado en Java posee plug-ins para Eclipse
 
 **Test de funcionalidad**
-- [ ] [Selenium](http://www.seleniumhq.org/)
-- [ ] [Katalon](https://www.katalon.com/)
+- [ ] [Selenium](http://www.seleniumhq.org/) :también es un UI testing, pero permite testear en paralelo, se usa para automatizar los comportamientos de browsers. Con la actualización, se integró WebDriver, que permite manejar un HtmlUnit que logra un high load.
+- [x] [Katalon](https://www.katalon.com/): puedes importar projectos de Selenium a Katalon, tiene una UI amigable y menos tediosa (enfocada para gente no especializada). Object Spy integrado y simple; entrega plugins de navegador (Chrome o Firefox) para grabar test desde la web.
 
 **Test de Seguridad**
-- [ ] [Nikto](https://cirt.net/Nikto2)
-- [ ] [AP/OWASP](https://www.owasp.org/index.php/OWASP_Zed_Attack_Proxy_Project)
-- [ ] [Metasploit](https://www.metasploit.com/)
+- [ ] [OpenVAS](http://www.openvas.org/) :herramienta para evaluar vulnerabilidades, al parecer el administrados y scanner de vulnerabilidad OpenSource más avanzado (fork de Nessus) Actualizado diaramente con nuevos NVT's
+- [ ] [Nexpose Community](http://www.rapid7.com/products/nexpose/compare-downloads.jsp) : otra herramienta para evaluar vulnerabilidad. Si bien es gratis está limitado a 32 direcciones IP y un usuario. Carece de escaneo para aplicaciones web.
+- [ ] [Retina CS Community](http://info.beyondtrust.com/cscommunity) :otra herramienta para evaluar vulnerabilidad, es una consola Web que simplifica y centralizael manejo de vulnerabilidades para más de 256 evaluaciones sin costo incluyendo evaluacion automatica de vulnerabildades en servers, estaciones de trabajo (workstations), dispositivos móviles, bases de datos, aplicaciones y aplicaciones web. Soporte completo para entornos VMware, icluyendo escane do imagen virtual online y offline, escaneo  de aplicaciones virtuales, e integración con vCenter.
+- [ ] [Nikto](https://cirt.net/Nikto2) : escaner de servidores Web que usa "comprhensive" test contra multiples elementos del servidor, incluyendo sobre 6700 archivos/programas potencialmente peligroso, tambien chequea servidores con versiones desactualizadas y problemas especificos para esas veersiones (para 270 servidores).
+- [ ] [Metasploit Framework](https://www.metasploit.com/) : framework para testeo de penetraciones que trabaja con Nexpose, recien posee una WebUI, se puede usar para validar vulnerbilidades encontradas por Nexpose
+- [ ] [ZAP: OWASP](https://www.owasp.org/index.php/OWASP_Zed_Attack_Proxy_Project) Zed Attack Proxy : herramienta integrada para encontrar vulnerabilidades en aplicaciones web. Fork de Paros Proxy, provee esceneres automatizados así como un set de herramientas para encontrar vulnerabilidades de seguridad manualmente. En continuo desarrollo a manos de OWASP, Microsoft y Google.
