--- a/Bitacora/06122017.md
+++ b/Bitacora/06122017.md
@@ -6,7 +6,7 @@
 
 ### 2. Test Performance
 - [x] [**Evaluar el espacio de trabajo**](https://github.com/AnnBenavides/Practica2/blob/master/Bitacora/04122017.md#2-test-performance)
-- [ ] **Construir los temas a evaluar con los test** 
+- [ ] [**Construir los temas a evaluar con los test**](https://github.com/AnnBenavides/Practica2/blob/master/Bitacora/05122017.md) 
 		***Code your test scripts:***
 
 			***Calibrar los modelos de workload***
@@ -16,4 +16,9 @@
 			- Cambiando el nro de iteraciones y tiempo entre ellas
 			- Cambiando los escenarios o datos de testeo
 
-			***Al final de esta fase:***
+		***Al final de esta fase:***
+		
+#Para mañana! (07122017)
+**En la mañana** : hablar con el area de desarrollo para fijar un segmento objetivo del sistema para ser testeado. 
+- Proponer estudio y modelo del sistema (al menos de usabilidad), fdepende del tamaño del sistema es cuanto me demore, pero es importante para identificar transacciones de riesgo o pundos urgentes/importantes/críticos de testear.
+- Sin miedo a la documentación >.<
