--- a/Bitacora/06122017.md
+++ b/Bitacora/06122017.md
@@ -21,4 +21,5 @@
 #Para mañana! (07122017)
 **En la mañana** : hablar con el area de desarrollo para fijar un segmento objetivo del sistema para ser testeado. 
 - Proponer estudio y modelo del sistema (al menos de usabilidad), fdepende del tamaño del sistema es cuanto me demore, pero es importante para identificar transacciones de riesgo o pundos urgentes/importantes/críticos de testear.
+- Lenguajes y herramientas utilizadas (adecuar [herramientas de testeo](https://github.com/AnnBenavides/Practica2/blob/master/Bitacora/05122017.md#recomendados-por-cristian-r--recomendaciones-encontradas) )
 - Sin miedo a la documentación >.<
