--- a/Bitacora/07122017.md
+++ b/Bitacora/07122017.md
@@ -11,9 +11,9 @@
 > Sobre diagramas, tenemos algunos a nivel general de arquitectura, pero creo que lo más rápido es explicarlos en una reunión. Diagramas de casos de uso también se realizaron hace muchos años, pero en la práctica han quedado obsoletos con la cantidad de cambios se han (siguen) haciendo sobre los sistemas.
 
 ### Milestones
-- nic.cl (Web)
-- Sistema de cuentas de usuario (Web)
-- EPP Server
+- registryPublic (Web) : issuea de código rP
+- Cuentas de usuarios (Web) : issues de código Rr
+- EPP Server : issues de código SE
 
 ### Metodologias
 #### Paso a paso
@@ -22,8 +22,8 @@
 - [ ] **Información a entregar:** correr los test, analizar resultados, hacerlos significativos para el equipo y trabajar en el proceso de afinamiento.
 
 
-#### Conoser los sistemas
-1. nic.cl
+#### Conocer los sistemas
+1. registryPublic
 	- **Navegar el sitio como usuario**
 	- Búsqueda de dominios
 	- Listado de eliminados
@@ -34,7 +34,7 @@
 	- Funciones del sistema?
 3. EPP Server
 	- **Investigar protocolo EPP**
-	- 
+	- _queda para el más tarde_
 
 #### How to
 - Trazar rutas de usuarios (en servicios web)
