--- a/Bitacora/07122017.md
+++ b/Bitacora/07122017.md
@@ -3,11 +3,11 @@
 ## Reunión
 
 > Para el tema de práctica de Andrea, creo que sería bueno juntarnos a conversar sobre las metodologías/herramientas que ha encontrado para abordar el tema de testing, tanto funcional como de estrés.
-
+>
 > Luego, con la metodología/herramienta definida, sugiero revisar los sistemas a los que se necesita hacer testing. Si bien tenemos decenas de sistemas, sugiero partir por dos sistemas web y uno que no es web. Sobre los sistemas web me refiero a: el que presta servicios públicos en www.nic.cl (búsqueda de dominios, listado de eliminados, listado de recién inscritos, whois) y el sistema de cuentas de usuario. Sobre el sistema no-web, me refiero a nuestro "EPP Server” que usa el protocolo EPP.
-
+>
 > Conociendo los sistemas para el testing, se podrán definir las pruebas a realizar, tanto funcionales como de estrés. Para las funcionales de sistema web sugiero definir las “rutas” que siguen los usuarios en los sistemas, en el sistema EPP podemos definir las secuencias de comandos que se espera probar. Para los test de estrés, podemos usar las mismas pruebas definidas pero con distintos modelos de carga, con distintos tiempos de prueba, diferentes cantidades de usuarios, etc.
-
+>
 > Sobre diagramas, tenemos algunos a nivel general de arquitectura, pero creo que lo más rápido es explicarlos en una reunión. Diagramas de casos de uso también se realizaron hace muchos años, pero en la práctica han quedado obsoletos con la cantidad de cambios se han (siguen) haciendo sobre los sistemas.
 
 ### Milestones
@@ -34,7 +34,7 @@
 	- Funciones del sistema?
 3. EPP Server
 	- **Investigar protocolo EPP**
-	- _queda para el más tarde_
+	- ¿qué conecta?
 
 #### How to
 - Trazar rutas de usuarios (en servicios web)
@@ -56,3 +56,28 @@
 	- Multiples listeners integrados y externos para visualizar y analizar resultados de los performance test
 2. [AB (Apache Brench)para servidores](http://httpd.apache.org/docs/2.2/programs/ab.html): enfocado en HTTP, desarrollado para Apache HTTP server
 3. [Speedtracer](https://code.google.com/archive/p/speedtracer/) : creado por Google, como una extensión de Chrome, basado en Java posee plug-ins para Eclipse
+
+## Post reunión
+### Milestones
+- registryPublic (Web) : issuea de código rP
+- Cuentas de usuarios (Web) : issues de código Rr
+- EPP Server : issues de código SE
+
+### Metodologias
+#### Paso a paso
+- [ ] **Evaluar el espacio de trabajo** 
+- [ ] **Construir los temas a evaluar con los test**
+- [ ] **Información a entregar**
+
+#### Conocer los sistemas
+1. registryPublic	
+2. Cuentas de usuarios	
+3. EPP Server
+	- Conecta Rr con Rf
+	- _no se prioriza, por lo que se analizará más adelante_
+	
+#### How to
+- Trazar rutas de usuarios (en servicios web)
+
+### Herramientas
+No se habló al respecto
