--- a/Bitacora/07122017.md
+++ b/Bitacora/07122017.md
@@ -1,14 +1,8 @@
 # 07122017 -> 
 
-## Reunión
+## Pre Reunión
 
-> Para el tema de práctica de Andrea, creo que sería bueno juntarnos a conversar sobre las metodologías/herramientas que ha encontrado para abordar el tema de testing, tanto funcional como de estrés.
->
-> Luego, con la metodología/herramienta definida, sugiero revisar los sistemas a los que se necesita hacer testing. Si bien tenemos decenas de sistemas, sugiero partir por dos sistemas web y uno que no es web. Sobre los sistemas web me refiero a: el que presta servicios públicos en www.nic.cl (búsqueda de dominios, listado de eliminados, listado de recién inscritos, whois) y el sistema de cuentas de usuario. Sobre el sistema no-web, me refiero a nuestro "EPP Server” que usa el protocolo EPP.
->
-> Conociendo los sistemas para el testing, se podrán definir las pruebas a realizar, tanto funcionales como de estrés. Para las funcionales de sistema web sugiero definir las “rutas” que siguen los usuarios en los sistemas, en el sistema EPP podemos definir las secuencias de comandos que se espera probar. Para los test de estrés, podemos usar las mismas pruebas definidas pero con distintos modelos de carga, con distintos tiempos de prueba, diferentes cantidades de usuarios, etc.
->
-> Sobre diagramas, tenemos algunos a nivel general de arquitectura, pero creo que lo más rápido es explicarlos en una reunión. Diagramas de casos de uso también se realizaron hace muchos años, pero en la práctica han quedado obsoletos con la cantidad de cambios se han (siguen) haciendo sobre los sistemas.
+> Correo de José U. _(Asunto:Dudas)_
 
 ### Milestones
 - registryPublic (Web) : issuea de código rP
