--- a/Bitacora/07122017.md
+++ b/Bitacora/07122017.md
@@ -3,7 +3,7 @@
 ## Pre Reunión
 
 > Correo de José U. _(Asunto:Dudas)_
-
+	
 ### Milestones
 - registryPublic (Web) : issuea de código rP
 - Cuentas de usuarios (Web) : issues de código Rr
@@ -59,19 +59,19 @@
 
 ### Metodologias
 #### Paso a paso
-- [ ] **Evaluar el espacio de trabajo** 
+- [ ] **Evaluar el espacio de trabajo** <- trabajando en esto
 - [ ] **Construir los temas a evaluar con los test**
 - [ ] **Información a entregar**
 
 #### Conocer los sistemas
-1. registryPublic	
+1. registryPublic	<- trabajando en esto
 2. Cuentas de usuarios	
 3. EPP Server
 	- Conecta Rr con Rf
 	- _no se prioriza, por lo que se analizará más adelante_
 	
 #### How to
-- Trazar rutas de usuarios (en servicios web)
+- Trazar rutas de usuarios (en servicios web) <- trabajando en esto
 
 ### Herramientas
 No se habló al respecto
