--- a/Bitacora/07122017.md
+++ b/Bitacora/07122017.md
@@ -59,19 +59,19 @@
 
 ### Metodologias
 #### Paso a paso
-- [ ] **Evaluar el espacio de trabajo** <- trabajando en esto
+- [ ] **Evaluar el espacio de trabajo** :exclamation: trabajando en esto
 - [ ] **Construir los temas a evaluar con los test**
 - [ ] **Información a entregar**
 
 #### Conocer los sistemas
-1. registryPublic	<- trabajando en esto
+1. registryPublic	:exclamation: trabajando en esto
 2. Cuentas de usuarios	
 3. EPP Server
 	- Conecta Rr con Rf
 	- _no se prioriza, por lo que se analizará más adelante_
 	
 #### How to
-- Trazar rutas de usuarios (en servicios web) <- trabajando en esto
+- Trazar rutas de usuarios (en servicios web) :exclamation: trabajando en esto
 
 ### Herramientas
 No se habló al respecto
