--- a/Bitacora/s2122017.md
+++ b/Bitacora/s2122017.md
@@ -10,7 +10,7 @@
 	- [ ] controversias
 	- [ ] acerca
 	- [ ] ayuda
-	- [ ] Login
+	- [ ] clientes
 
 	- [ ] contador
 	- [ ] tecnologia
@@ -35,7 +35,7 @@
 	- [ ] Whois
 
 
-## Mapa de navegación clientes.nic.cl (LOGIN)
+## Mapa de navegación *clientes*.nic.cl
 - [Diagrama en draw.io]()
 	- [ ] Inicio
 	- [ ] registrar
