--- a/Bitacora/s2122017.md
+++ b/Bitacora/s2122017.md
@@ -37,7 +37,7 @@
 	- [ ] Whois
 
 
-## Mapa de navegación *clientes*.nic.cl
+## Mapa de navegación *clientes*.nic.cl (registrar)
 - [Diagrama en draw.io]()
 
 	- [ ] Inicio
