--- a/Bitacora/s2122017.md
+++ b/Bitacora/s2122017.md
@@ -5,22 +5,22 @@
 
 	**Header**
 	- [x] Inicio
-	- [ ] Dominios
-	- [ ] Whois
-	- [ ] normativa
-	- [ ] controversias
-	- [ ] acerca
-	- [ ] ayuda
+	- Dominios
+	- Whois
+	- normativa
+	- controversias
+	- acerca
+	- ayuda
 	- [ ] clientes
 
-	- [ ] contador
-	- [ ] tecnologia
-	- [ ] estadísitica
-	- [ ] anuncios
+	- contador
+	- tecnologia
+	- estadísitica
+	- anuncios
 
 	**Footer**
-	- [ ] buscar
-	- [ ] contacto
+	- buscar
+	- contacto
 
 	**Formularios**
 	- [ ] autoatencion
@@ -40,5 +40,7 @@
 ## Mapa de navegación *clientes*.nic.cl (registrar)
 - [Diagrama en draw.io]()
 
-	- [ ] Inicio
-	- [ ] registrar
+	- [ ] Login
+	- [x] Recuperación de clave
+	- [x] Cambiar password
+	- [ ] Nuevos usuarios
