--- a/Bitacora/s2122017.md
+++ b/Bitacora/s2122017.md
@@ -11,7 +11,7 @@
 	- controversias
 	- acerca
 	- ayuda
-	- [ ] clientes
+	- [x] clientes
 
 	- contador
 	- tecnologia
@@ -40,7 +40,8 @@
 ## Mapa de navegación *clientes*.nic.cl (registrar)
 - [Diagrama en draw.io]()
 
-	- [ ] Login
+	- [x] Inicio clientes (Logon)
+	- [x] Login
 	- [x] Recuperación de clave
-	- [ ] Cambiar password
-	- [ ] Nuevos usuarios
+	- [x] Cambiar password
+	- [x] Nuevos usuarios
