--- a/Bitacora/s2122017.md
+++ b/Bitacora/s2122017.md
@@ -40,8 +40,11 @@
 ## Mapa de navegación *clientes*.nic.cl (registrar)
 - [Diagrama en draw.io]()
 
-	- [x] Inicio clientes (Logon)
+	- [x] Logon (Inicio clientes)
 	- [x] Login
+	  - [ ] Home Sesión
 	- [x] Recuperación de clave
-	- [x] Cambiar password
+	  - [x] Cambiar password
 	- [x] Nuevos usuarios
+	  - [x] Crear usuario
+	  - [x] Activar cuenta
