--- a/Bitacora/s2122017.md
+++ b/Bitacora/s2122017.md
@@ -38,13 +38,22 @@
 
 
 ## Mapa de navegación *clientes*.nic.cl (registrar)
-- [Diagrama en draw.io]()
+- Vista visita
 
 	- [x] Logon (Inicio clientes)
 	- [x] Login
-	  - [ ] Home Sesión
+	  - [ ] Home Sesion
 	- [x] Recuperación de clave
 	  - [x] Cambiar password
 	- [x] Nuevos usuarios
 	  - [x] Crear usuario
 	  - [x] Activar cuenta
+
+- Vista Usuario (Home Sesion)
+	- [x] Salir
+	- [ ] Editar usuario
+		- [x] Grabar Usuario
+	- [ ] Mis Dominios
+	- [ ] Comprobantes
+	- [ ] Avisos
+	- [ ] Carro
