--- a/Bitacora/s2122017.md
+++ b/Bitacora/s2122017.md
@@ -5,13 +5,13 @@
 
 	**Header**
 	- [x] Inicio
-	- Dominios
-	- Whois
+	- *Dominios*
+	- *Whois*
 	- normativa
 	- controversias
 	- acerca
 	- ayuda
-	- [x] clientes
+	- [x] *clientes*
 
 	- contador
 	- tecnologia
@@ -23,22 +23,29 @@
 	- contacto
 
 	**Formularios**
-	- [ ] autoatencion
-	- [ ] registry
+	- *autoatencion*
+	- *registry*
 
 ## Mapa de navegación registry
-- [Diagrama en draw.io]()
+- Desde NIC.CL
 
 	**Slideadds en inicio**
-	- [ ] Eliminados
+	- [ ] Eliminados día
 	- [ ] Whois
 
 	**Formularios**
 	- [ ] Whois
 
+-Desde Dominios
+	- [ ] Whois
+	- [ ] Ultimos dominios registrados (hora, dia, semana, mes)
+	- [ ] Ultimos dominios eliminados (hora, dia, semana, mes)
+-Desde Whois
+	- [ ] Buscar dominio
+
 
 ## Mapa de navegación *clientes*.nic.cl (registrar)
-- Vista visita
+- Vista visita (clientes)
 
 	- [x] Logon (Inicio clientes)
 	- [x] Login
@@ -53,6 +60,8 @@
 	- [x] Salir
 	- [ ] Editar usuario
 		- [x] Grabar Usuario
+	- [ ] Agregar Dominio
+		- [ ] Crear Dominio
 	- [ ] Mis Dominios
 	- [ ] Comprobantes
 	- [ ] Avisos
