--- a/Bitacora/s2122017.md
+++ b/Bitacora/s2122017.md
@@ -1,50 +1,48 @@
 # 11/15122017 -> Diagramas
 
 ## Mapa de navegación nic.cl
-- [Diagrama en draw.io](https://github.com/AnnBenavides/Practica2/blob/master/Untitled%20Diagram.xml)
+**Header**
+- Inicio
+- *Dominios*
+- *Whois (html)*
+- normativa
+- controversias
+- acerca
+- ayuda
+- *clientes*
 
-	**Header**
-	- [x] Inicio
-	- *Dominios*
-	- *Whois*
-	- normativa
-	- controversias
-	- acerca
-	- ayuda
-	- [x] *clientes*
+- contador
+- tecnologia
+- estadísitica
+- anuncios
 
-	- contador
-	- tecnologia
-	- estadísitica
-	- anuncios
+**Footer**
+- buscar
+- contacto
 
-	**Footer**
-	- buscar
-	- contacto
-
-	**Formularios**
-	- *autoatencion*
-	- *registry*
+**Formularios**
+- *autoatencion*
+- *registry*
 
 ## Mapa de navegación registry
 - Desde NIC.CL
 
 	**Slideadds en inicio**
-	- [ ] Eliminados día
-	- [ ] Whois
+	- [x] Eliminados día
+	- [x] Whois
 
 	**Formularios**
-	- [ ] Whois
+	- [x] Whois
 
 - Desde Dominios
 
-	- [ ] Whois
-	- [ ] Ultimos dominios registrados (hora, dia, semana, mes)
-	- [ ] Ultimos dominios eliminados (hora, dia, semana, mes)
+	- [x] Whois
+	- [x] Ultimos dominios registrados (hora, dia, semana, mes)
+	- [x] Ultimos dominios eliminados (hora, dia, semana, mes)
 
-- Desde Whois
+- Desde Whois (html)
 	
-	- [ ] Buscar dominio
+	- [x] Buscar dominio
 
 
 ## Mapa de navegación *clientes*.nic.cl (registrar)
