--- a/Bitacora/s2122017.md
+++ b/Bitacora/s2122017.md
@@ -67,3 +67,10 @@
 	- [ ] Comprobantes
 	- [ ] Avisos
 	- [ ] Carro
+
+# How it works?
+## [Selenium](https://www.adictosaltrabajo.com/tutoriales/selenium-ide/)
+- Funciona con un plugin en Firefox
+
+## [JMeter](https://www.tutorialspoint.com/jmeter/jmeter_quick_guide.htm)
+- ***Java (Linux)*** : java version "1.7.0_25", Java(TM) SE Runtime Environment (build 1.7.0_25-b15), Java HotSpot(TM) 64-Bit Server VM (build 23.25-b01, mixed mode)
