--- a/Bitacora/s2122017.md
+++ b/Bitacora/s2122017.md
@@ -71,6 +71,22 @@
 # How it works?
 ## [Selenium](https://www.adictosaltrabajo.com/tutoriales/selenium-ide/)
 - Funciona con un plugin en Firefox
+- **TODO** investigar sobre dependencia del browser al exportar los test como scripts de JAVA
 
 ## [JMeter](https://www.tutorialspoint.com/jmeter/jmeter_quick_guide.htm)
 - ***Java (Linux)*** : java version "1.7.0_25", Java(TM) SE Runtime Environment (build 1.7.0_25-b15), Java HotSpot(TM) 64-Bit Server VM (build 23.25-b01, mixed mode)
+
+# Caracteristicas computador
+### Resumen
+- Processor: 2x Intel(R) Core(TM)2 Duo CPU E7300  @ 2.66GHz
+- Memory: 2047MB 
+- Operating System: Ubuntu 16.04.3 LTS
+
+
+### Sistema Operativo
+- Kernel: Linux 4.4.0-103-generic (x86_64)
+- Compiled: #126-Ubuntu SMP Mon Dec 4 16:23:28 UTC 2017
+- C Library: Unknown
+- Default C Compiler: GNU C Compiler version 5.4.0 20160609 (Ubuntu 5.4.0-6ubuntu1~16.04.5) 
+- Distribution		: Ubuntu 16.04.3 LTS
+- Desktop Environment		: Unity (ubuntu)
