--- a/Bitacora/s2122017.md
+++ b/Bitacora/s2122017.md
@@ -3,46 +3,49 @@
 ## Mapa de navegación nic.cl
 **Header**
 - Inicio
-- *Dominios*
-- *Whois (html)*
-- normativa
-- controversias
-- acerca
-- ayuda
-- *clientes*
+- *Dominios* http://www.nic.cl/dominios/index.html
+- *Whois (html)* http://www.nic.cl/whois/
+- normativa http://www.nic.cl/normativa/index.html
+- controversias http://www.nic.cl/controversias/index.html
+- acerca http://www.nic.cl/acerca/index.html
+- ayuda http://www.nic.cl/ayuda/index.html
+- *clientes* /registry/Whois.do
 
-- contador
-- tecnologia
-- estadísitica
-- anuncios
+
+- contador http://www.nic.cl/contador.html
+- tecnologia http://www.nic.cl/tecnologia/index.html
+- estadísitica http://www.nic.cl/estadisticas/index.html
+- anuncios http://www.nic.cl/anuncios/
 
 **Footer**
-- buscar
-- contacto
+- buscar http://www.nic.cl/buscar/index.html
+- contacto http://www.nic.cl/contacto/index.html
 
 **Formularios**
-- *autoatencion*
-- *registry*
+- *autoatencion* : https://www.nic.cl/autoatencion
+- *registry* : /registry/Whois.do
+
 
 ## Mapa de navegación registry
 - Desde NIC.CL
 
 	**Slideadds en inicio**
-	- [x] Eliminados día
-	- [x] Whois
+	- [x] Eliminados día : https://www.nic.cl/registry/Eliminados.do?t=1d
+	- [x] Whois :http://www.nic.cl/registry/Whois.do
 
 	**Formularios**
-	- [x] Whois
+	- [x] Whois: /registry/Whois.do
 
-- Desde Dominios
+- Desde Dominios http://www.nic.cl/dominios/index.html
 
-	- [x] Whois
-	- [x] Ultimos dominios registrados (hora, dia, semana, mes)
-	- [x] Ultimos dominios eliminados (hora, dia, semana, mes)
+	- [x] Whois http://nic.cl/registry/Whois.do
+	- [x] Ultimos dominios registrados (hora, dia, semana, mes) http://nic.cl/registry/Ultimos.do?t=1h
+	- [x] Ultimos dominios eliminados (hora, dia, semana, mes)http://nic.cl/registry/Eliminados.do?t=1d 
 
 - Desde Whois (html)
 	
-	- [x] Buscar dominio
+	- [x] Buscar dominio /registry/BuscarDominio.do;jsessionid=9DE834BB6C612BF2E8848C9C086A2D06.worker1
+
 
 
 ## Mapa de navegación *clientes*.nic.cl (registrar)
@@ -51,9 +54,9 @@
 	- [x] Logon (Inicio clientes)
 	- [x] Login
 	  - [ ] Home Sesion
-	- [x] Recuperación de clave
+	- [x] Recuperación de clave https://clientes.nic.cl/registrar/recuperaPassword.do
 	  - [x] Cambiar password
-	- [x] Nuevos usuarios
+	- [x] Nuevos usuarios https://clientes.nic.cl/registrar/agregarUsuario.do
 	  - [x] Crear usuario
 	  - [x] Activar cuenta
 
