--- a/Bitacora/s3122017.md
+++ b/Bitacora/s3122017.md
@@ -1,4 +1,4 @@
-# Mapeo de las aplicaciones
+# 18/22122017 Primeros pasos
 ## Scrapers
 - [x] ```scraper.py``` detecta URLs y formularios dándole una URL como string, puede navegar dentro de los threads de forma recursiva.
 	- [x] Todos los links dentro del sitio principal (nic.cl)
